# olaverse-foundry

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
changelog/: index.html
choosing/: index.html
cli/: index.html
concepts/: index.html
data/: index.html
docs/: changelog.md  choosing.md  cli.md  concepts.md  data.md  evaluation.md  growth.md  index.md  inference.md  quantization.md  quickstart.md  recipes.md  retrieval.md  skillpacks.md  synthetic.md
docs/guides/: low-resource-retriever.md  small-classifier.md
docs/stylesheets/: extra.css
docs/training/: cached.md  config.md  contrastive.md  distil-mlm.md  embed.md  encoder-distill.md  heads.md  index.md  mlm.md  torch.md
evaluation/: index.html
examples/: ola_15b.yaml
foundry/: __init__.py  __main__.py  backends.py  cli.py  eval.py  inference.py  quant.py  retrieval.py  synthetic.py
foundry/contracts/: __init__.py  protocols.py
foundry/data/: __init__.py  pipeline.py
foundry/fusion/: __init__.py  align.py  kernel.py  strategies.py  vocab_map.py
foundry/growth/: __init__.py  mergekit_backend.py  planner.py
foundry/io/: __init__.py  loader.py  seed.py
foundry/recipes/: __init__.py  recipe.py  schema.py
foundry/skillpacks/: __init__.py  pack.py  peft_bridge.py
foundry/teachers/: __init__.py  cache.py  registry.py
foundry/training/: __init__.py  _logger.py  _scheduler.py  accelerate_distill.py  contrastive.py  distill.py  (+6 more)
growth/: index.html
inference/: index.html
overrides/: main.html
quantization/: index.html
quickstart/: index.html
recipes/: index.html
retrieval/: index.html
search/: search_index.json
skillpacks/: index.html
synthetic/: index.html
tests/: test_any_arch.py  test_contrastive.py  test_distil_mlm.py  test_encoder_base.py  test_eval.py  test_foundry.py  test_heads.py  test_m1.py  test_m2.py  test_m3.py  test_m4.py  test_m5.py  test_prod.py  test_quant.py  test_retrieval.py  test_synthetic.py
training/: index.html
(+11 files in other folders)
